Hide t page button.

--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 layout: default
 ---
 
-{% include posts.html %}
+<div class="home"><p>你可以通过电子邮件与我们联系:
+    <a href="mailto:tloipq@gmail.com?subject=联系我们">tloipq@gmail.com</a></p>
+    <p>或者通过添加微信:</p> 
+    <p><img width="300" src="{{ site.baseurl }}/assets/images/qrcode.jpg" alt="微信" /></p>
+</div>
+    
